# QT_SDR

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  filter.h  main.cpp  mainwindow.cpp  mainwindow.h  oversample.cpp  qt  qt.cpp  sdr.cpp  sdr.h  sdrworker.cpp  sdrworker.h
files/: project.webm
qt_autogen/: moc_predefs.h  mocs_compilation.cpp
qt_autogen/EJRQKI7XPS/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_sdrworker.cpp  moc_sdrworker.cpp.d
src/QT_project/: sdr_data.txt  sdr_data3.txt  sdr_dataрошг.txt  sdr_dataфффффффпроверить.txt
src/QT_samples/: sdr_data1.txt  sdr_data2.txt  sent_qam_signal.txt
src/samples/: README.md
src/samples/data/: txdata.pcm  txdata1.pcm  txdata2.pcm  txdata3.pcm  txdata4.pcm  txdata_bark.pcm  txdata_bark1.pcm  txdata_bark2.pcm  txdata_bark3.pcm  txdata_bark4.pcm
tests/: CMakeCache.txt  Makefile  cmake_install.cmake  qt
tests/NOT_QT/: filter.cpp
tests/NOT_QT_project/: CMakeLists.txt  TED.cpp  filter.h  main.cpp  qam.cpp  qam.h
tests/QT_project/: CMakeLists.txt  TED.cpp  TED.h  fft.hpp  filter.cpp  filter.h  main.cpp  mainwindow.cpp  mainwindow.h  oversample.cpp  oversample.h  qam.cpp  qam.h  sdr.cpp  sdr.h  sdrworker.cpp  sdrworker.h  synchr.cpp  synchr.h
tests/Soapy_project/: CMakeLists.txt  soapy_pluto_sdr_timestamp.c
tests/Visual/: NOT_QT_plot.py  Soapy_plot.py  plot_qt.py
tests/qt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_sdrworker.cpp  moc_sdrworker.cpp.d
